new URI instead of new URL, flickr, hqporn.